0.517 2024-05-31
  [Bug Fix]
    * Fix the bug that Sys#getpeername method may allocate a wrong size of memory.
    * Fix the bug that Sys#getsockname method may allocate a wrong size of memory.
    * Fix the bug that Sys::Socket::Sockaddr#new method may allocate a wrong size of memory.
    * Fix the bug that Sys#accept method may allocate a wrong size of memory.
    
0.516 2024-05-27
  [New Features]
    * Add push method to Sys::Poll::PollfdArray class.
    * Add remove method to Sys::Poll::PollfdArray class.
    * Add capacity field to Sys::Poll::PollfdArray class.
    * Add $capacity optional argument to Sys::Poll::PollfdArray#new method.
    
0.515 2024-05-24
  [Bug Fix]
    * May fix the bug that Sys::IO#seekdir method does not work well.
  [Exception Message Changes]
    * Exception messages in native classes are improved.
  [New Features]
    * Add the seekdir method to Sys class.
  [Changes]
    * Sys#readdir method throws an exception if the directory stream is not defined or the directory stream is already closed.
    * Sys#closedir method throws an exception if the directory stream is not defined or the directory stream is already closed.
    * Sys#rewinddir method throws an exception if the directory stream is not defined or the directory stream is already closed.
    * Sys#seekdir method throws an exception if the directory stream is not defined or the directory stream is already closed.
    * Sys#telldir method throws an exception if the directory stream is not defined or the directory stream is already closed.
    
    * Sys#fileno method throws an exception if the stream is not defined or the stream is already closed.
    * Sys#read method throws an exception if the stream is not defined or the stream is already closed.
    * Sys#eof method throws an exception if the stream is not defined or the stream is already closed.
    * Sys#readline method throws an exception if the stream is not defined or the stream is already closed.