@@ -482,11 +482,11 @@ int32_t SPVM__Sys__Socket__sendto(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   void* obj_addr = stack[4].oval;
   
-  if (!obj_addr) {
-    return env->die(env, stack, "The socket address $addr must be defined.", __func__, FILE_NAME, __LINE__);
-  }
+  const struct sockaddr* addr = NULL;
   
-  const struct sockaddr* addr = env->get_pointer(env, stack, obj_addr);
+  if (obj_addr) {
+    addr = env->get_pointer(env, stack, obj_addr);
+  }
   
   int32_t addrlen = stack[5].ival;
   
